--- a/css/styles.css
+++ b/css/styles.css
@@ -106,11 +106,12 @@ button:hover {
   );
 }
 
-h3 {
+h3,
+h1 {
   font-size: 1.3em;
 }
 
-.result > h3 {
+.result > h1 {
   color: hsl(var(--Light-lavender));
   padding-bottom: 1.35em;
 }
@@ -245,7 +246,8 @@ button {
     height: 8.5em;
   }
 
-  h3 {
+  h3,
+  h1 {
     font-size: 1.1em;
   }
 
